--- a/.github/workflows/fe-tracking-release.yml
+++ b/.github/workflows/fe-tracking-release.yml
@@ -65,14 +65,14 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-      # selecting a toolchain either by action or manual `rustup` calls should happen
-      # before the plugin, as the cache uses the current rustc version as its cache key
-      - run: rustup update
-      - uses: Swatinem/rust-cache@v1
+      # - uses: actions/setup-java@v3
+      #   with:
+      #     distribution: 'temurin'
+      #     java-version: '11'
+      # # selecting a toolchain either by action or manual `rustup` calls should happen
+      # # before the plugin, as the cache uses the current rustc version as its cache key
+      # - run: rustup update
+      # - uses: Swatinem/rust-cache@v1
       - name: Build / Install ALXR Android dependencies
         run: |
           rustup target add aarch64-linux-android
@@ -113,14 +113,14 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '11'
-      # selecting a toolchain either by action or manual `rustup` calls should happen
-      # before the plugin, as the cache uses the current rustc version as its cache key
-      - run: rustup update
-      - uses: Swatinem/rust-cache@v1      
+      # - uses: actions/setup-java@v3
+      #   with:
+      #     distribution: 'temurin'
+      #     java-version: '11'
+      # # selecting a toolchain either by action or manual `rustup` calls should happen
+      # # before the plugin, as the cache uses the current rustc version as its cache key
+      # - run: rustup update
+      # - uses: Swatinem/rust-cache@v1      
       - name: Build / Install ALXR Android dependencies
         run: |         
           rustup target add aarch64-linux-android
@@ -164,7 +164,7 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - uses: Swatinem/rust-cache@v1
+      # - uses: Swatinem/rust-cache@v1
       - uses: humbletim/setup-vulkan-sdk@v1.2.0
         with:
           vulkan-query-version: latest
@@ -214,7 +214,7 @@ jobs:
         with:
           toolchain: stable
           override: true
-      - uses: Swatinem/rust-cache@v1
+      # - uses: Swatinem/rust-cache@v1
       - uses: humbletim/setup-vulkan-sdk@v1.2.0
         with:
           vulkan-query-version: latest
