--- a/.github/workflows/fe-tracking-release.yml
+++ b/.github/workflows/fe-tracking-release.yml
@@ -138,7 +138,7 @@ jobs:
           sudo $SDK_MANAGER --install "ndk;25.2.9519653"
 
           rustup target add aarch64-linux-android
-          cargo install cargo-apk --git https://github.com/korejan/android-ndk-rs.git --branch android-manifest-entries
+          cargo install cargo-apk --git https://github.com/korejan/cargo-apk.git --branch android-manifest-entries
 
           # Fetch alxr-engine submodule.
           git submodule update --init --recursive
@@ -188,7 +188,7 @@ jobs:
           sudo $SDK_MANAGER --install "ndk;25.2.9519653"
           
           rustup target add aarch64-linux-android
-          cargo install cargo-apk --git https://github.com/korejan/android-ndk-rs.git --branch android-manifest-entries
+          cargo install cargo-apk --git https://github.com/korejan/cargo-apk.git --branch android-manifest-entries
           
           # Fetch alxr-engine submodule.
           git submodule update --init --recursive
