--- a/.github/workflows/fe-tracking-release.yml
+++ b/.github/workflows/fe-tracking-release.yml
@@ -134,6 +134,7 @@ jobs:
           cache-targets: "false"
       - name: Build / Install ALXR Android dependencies
         run: |
+          sudo apt install gcc-multilib
           SDK_MANAGER=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager
           sudo $SDK_MANAGER --install "ndk;25.2.9519653"
 
@@ -184,6 +185,7 @@ jobs:
           cache-targets: "false" 
       - name: Build / Install ALXR Android dependencies
         run: |
+          sudo apt install gcc-multilib
           SDK_MANAGER=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager
           sudo $SDK_MANAGER --install "ndk;25.2.9519653"
           
