--- a/.github/workflows/fe-tracking-release.yml
+++ b/.github/workflows/fe-tracking-release.yml
@@ -5,8 +5,8 @@ env:
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 22 * * *"
+  # schedule:
+  #   - cron: "0 22 * * *"
 
 jobs:
   prepare_release:
